--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -9,6 +9,18 @@ name: Labeler
 on: [pull_request]
 
 jobs:
+  issueWelcomeBOT:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v4
+        with:
+          script: |
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '👋 Thanks for PR! \n ** build & test 실패시 review  불가합니다.**'
+            })
   label:
 
     runs-on: ubuntu-latest
