--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,31 +1,41 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
+name: earth-github-action-test CI
 
-name: Java CI with Gradle
-
+# 하기 내용에 해당하는 이벤트 발생 시 github action 동작
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  push: 
+    branches:
+      - 'feature/*'
+      - 'dev'
+      - 'main'
+  pull_request: 
+    branches:
+      - 'feature/*'
+      - 'dev'
+      - 'main'
 
 jobs:
-  build:
-
+  build: 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
-      with:
-        arguments: build
+      - uses: actions/checkout@v2 
+
+      - name: Set up JDK 11 
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11 
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build with Gradle 
+        run: ./gradlew build -x test
+
+      - name: Test with Gradle # test application build
+        run: ./gradlew test
+
+      - name: Publish Unit Test Results 
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: ${{ always() }} 
+        with:
+          files: build/test-results/**/*.xml
