--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -3,13 +3,15 @@ name: Greetings
 on: [issues]
 
 jobs:
-  greeting:
+  issueWelcomeBOT:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: '🎉Thanks for Open Issue!'
+      - uses: actions/github-script@v4
+        with:
+          script: |
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '👋 Thanks for Issue!'
+            })
