--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -9,7 +9,7 @@ name: Labeler
 on: [pull_request]
 
 jobs:
-  issueWelcomeBOT:
+  welcomeBot:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v4
@@ -20,9 +20,3 @@ jobs:
               repo: context.repo.repo,
               body: '👋 Thanks for PR! \n ** build & test 실패시 review  불가합니다.**'
             })
-  label:
-
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
