--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compileOnly'org.projectlombok:lombok'
+    annotationProcessor'org.projectlombok:lombok'
+    implementation'io.springfox:springfox-swagger2:2.9.2'
+    implementation'io.springfox:springfox-swagger-ui:2.9.2'
 }
 
 test {
