--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly'org.projectlombok:lombok'
     annotationProcessor'org.projectlombok:lombok'
-    implementation'io.springfox:springfox-swagger2:2.9.2'
-    implementation'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
 
 test {
