feat: Add pr welcome bot
Signed-off-by: choipureum <pooreumsunny@gmail.com>

--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,6 +1,10 @@
-name: Contiribution Thanks
+# This is a basic workflow to help you get started with Actions
 
-on: [issues]
+name: prWelcomeBOT
+
+on:
+  pull_request_target:
+    types: [opened]
 
 jobs:
   issueWelcomeBOT:
@@ -10,7 +14,8 @@ jobs:
         with:
           script: |
             github.issues.createComment({
+              issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks for Contribution!'
+              body: '👋 Thanks for PR! Please regist comment with command: \n ** 반드시 테스트 및 빌드를 통과해주세요. **  \n 테스트 및 빌드 성공 시에 리뷰 권한 승인됩니다..!'
             })
