--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
   datasource:
+    username: test  # 사용자 이름 (로그인 시 사용)
+    password: 1234
     hikari:
       jdbc-url: jdbc:h2:mem:testdb;MODE=MYSQL
   h2:
