--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,17 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+    //cache
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation group: 'javax.cache', name: 'cache-api', version: '1.1.1'
+    implementation group: 'org.hibernate', name: 'hibernate-jcache', version: '5.4.19.Final'
+    implementation group: 'org.ehcache', name: 'ehcache', version: '3.8.1'
+
+    //aop
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+    //test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
