--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     show_sql: true
     hibernate:
       ddl-auto: update
+      cache:
+        use_second_level_cache: true
+        region:
+          factory_class: org.hibernate.cache.jcache.internal.JCacheRegionFactory
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
