--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,24 +3,4 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
   profiles:
-    include: oauth
-  jpa:
-    show_sql: true
-    hibernate:
-      ddl-auto: update
-      cache:
-        use_second_level_cache: true
-        region:
-          factory_class: org.hibernate.cache.jcache.internal.JCacheRegionFactory
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
-  datasource:
-    hikari:
-      jdbc-url: jdbc:h2:mem:testdb;MODE=MYSQL
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: true
-      path: /h2-console
+    include: config.oauth, config.local
