--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,8 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
         with:
-          submodules: recursive
+          token: ${{ secrets.GITHUB_TOKEN }}
+          submodules: true
 
       - name: Set up JDK 11 
         uses: actions/setup-java@v1
