--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Set up JDK 11 
         uses: actions/setup-java@v1
-        with:git
+        with:
           java-version: 11 
 
       - name: Grant execute permission for gradlew
