--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,14 +19,9 @@ jobs:
 
     steps:
       - name: checkout
-        uses: actions/checkout@v2
-
-      - name: Checkout submodules
-        shell: bash
-        run: |
-          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-          git submodule sync --recursive
-          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+        uses: actions/checkout@v1
+        with:
+          submodules: true
 
       - name: Set up JDK 11 
         uses: actions/setup-java@v1
