--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,6 +21,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v1
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           submodules: true
 
       - name: Set up JDK 11 
