--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'org.projectlombok:lombok:1.18.20'
     implementation 'org.projectlombok:lombok:1.18.20'
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
