--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,6 +8,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
+        format_sql : true
         dialect: org.hibernate.dialect.MySQL5Dialect
   datasource:
     hikari:
@@ -18,6 +19,14 @@ spring:
       settings:
         web-allow-others: true
       path: /h2-console
+
+logging:
+  level:
+    org:
+      hibernate:
+        type:
+          descriptor:
+            sql: trace
 
 kakao:
   url:
