--- a/build.gradle
+++ b/build.gradle
@@ -51,13 +51,11 @@ dependencies {
 
     // Querydsl JPAAnnotationProcessor 사용 지정
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
-    // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
-    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-    // java.lang.NoClassDefFoundError(javax.annotation.Generated) 발생 대응
-    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api" // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api" // java.lang.NoClassDefFoundError(javax.annotation.Generated) 발생 대응
 }
 
-//querydsl clean
+// querydsl clean (build and run by IntelliJ)
 clean {
     delete file('src/main/generated')
 }
